...
    ) {
        Box(contentAlignment = Alignment.Center) {
            AsyncImage(
                model = ImageRequest.Builder(LocalContext.current)
                    .data(image)
                    .build(),
                contentDescription = "Selected Image",
                modifier = Modifier
                    .fillMaxHeight()
                    .clickable { clicked = !clicked },
                contentScale = ContentScale.Crop,
                colorFilter = filter
            )
...

@Composable
private fun AddPictureFromGalleryButton(
    onClick: () -> Unit,
) {
    AddPhotoButton(
        modifier = Modifier.testTag("Add From Gallery Button"),
        onClick = onClick,
        icon = Icons.Default.AddPhotoAlternate
    )
}

@Composable
...
